--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/project?chracterEncoding=utf-8
     username: root
-    password: password
+    password: v09809809800
   jpa:
     hibernate:
       ddl-auto: update #先用创建模式，根据定义的实体类来建表
@@ -17,3 +17,5 @@ spring:
       content-type:
         text/html
     cache: false #项目上线的时候一定是True
+  session:
+    store-type: jdbc
